[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/UI/GameUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/System/GameManager.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Environment/Bricks/Destroy_Animation/Brick_destroy0.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Environment/Bricks/indestructibleBrick.png" type="Texture" id=5]
[ext_resource path="res://Fonts/ARCADE_R.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://Scenes/Environment/SuddenDeath.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sprites/Environment/Background/Ground.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Environment/Background/Dark_Grass.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Environment/Background/Light_Grass.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Environment/Background/Light_Sand.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Environment/Background/Dark_Sand.png" type="Texture" id=12]

[sub_resource type="TileSet" id=5]
0/name = "Ground.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Dark_Grass.png 1"
1/texture = ExtResource( 9 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Light_Grass.png 2"
2/texture = ExtResource( 10 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Dark_Sand.png 3"
3/texture = ExtResource( 12 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Light_Sand.png 4"
4/texture = ExtResource( 11 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[sub_resource type="TileSet" id=6]
0/name = "Brick_destroy0.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "indestructibleBrick.png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 1
1/autotile/bitmask_mode = 0
1/autotile/bitmask_flags = [  ]
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 32, 32 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 6 )

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="GroundTileMap" type="TileMap" parent="."]
tile_set = SubResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 262154, 3, 0, 262155, 4, 0, 262156, 3, 0, 262157, 2, 0, 262158, 1, 0, 262159, 2, 0, 262160, 1, 0, 262161, 2, 0, 262162, -1073741823, 0, 262163, -1073741822, 0, 262164, 1, 0, 262165, 2, 0, 327690, 4, 0, 327691, 3, 0, 327692, 4, 0, 327693, 1, 0, 327694, 2, 0, 327695, 1, 0, 327696, 2, 0, 327697, 1, 0, 327698, -1073741822, 0, 327699, 1, 0, 327700, 2, 0, 327701, 1, 0, 393226, 3, 0, 393227, 4, 0, 393228, 3, 0, 393229, 2, 0, 393230, 1, 0, 393231, 2, 0, 393232, 1, 0, 393233, 4, 0, 393234, -1073741823, 0, 393235, -1073741822, 0, 393236, 1, 0, 393237, 2, 0, 458762, 4, 0, 458763, 3, 0, 458764, 4, 0, 458765, 1, 0, 458766, -1073741822, 0, 458767, -1073741823, 0, 458768, 2, 0, 458769, 3, 0, 458770, 2, 0, 458771, 1, 0, 458772, 2, 0, 458773, 1, 0, 524298, 1, 0, 524299, 2, 0, 524300, 1, 0, 524301, 2, 0, 524302, -1073741823, 0, 524303, -1073741822, 0, 524304, -1073741823, 0, 524305, 2, 0, 524306, 1, 0, 524307, 2, 0, 524308, 1, 0, 524309, 2, 0, 589834, 2, 0, 589835, 1, 0, 589836, 2, 0, 589837, 1, 0, 589838, 2, 0, 589839, -1073741823, 0, 589840, -1073741822, 0, 589841, 1, 0, 589842, 2, 0, 589843, 1, 0, 589844, 2, 0, 589845, 1, 0, 655370, 1, 0, 655371, 2, 0, 655372, 1, 0, 655373, 2, 0, 655374, 1, 0, 655375, 2, 0, 655376, 1, 0, 655377, 4, 0, 655378, 3, 0, 655379, 4, 0, 655380, 1, 0, 655381, 2, 0, 720906, 2, 0, 720907, 1, 0, 720908, 2, 0, 720909, 3, 0, 720910, 2, 0, 720911, 1, 0, 720912, 2, 0, 720913, 3, 0, 720914, 4, 0, 720915, 3, 0, 720916, 2, 0, 720917, 1, 0, 786442, 1, 0, 786443, 2, 0, 786444, 1, 0, 786445, 4, 0, 786446, 1, 0, 786447, 2, 0, 786448, 1, 0, 786449, 4, 0, 786450, 3, 0, 786451, 4, 0, 786452, 1, 0, 786453, 2, 0, 851978, 2, 0, 851979, 1, 0, 851980, 2, 0, 851981, -1073741823, 0, 851982, -1073741822, 0, 851983, 1, 0, 851984, 2, 0, 851985, 3, 0, 851986, 4, 0, 851987, 3, 0, 851988, 2, 0, 851989, 1, 0, 917514, 1, 0, 917515, 2, 0, 917516, -1073741823, 0, 917517, -1073741822, 0, 917518, -1073741823, 0, 917519, 2, 0, 917520, 1, 0, 917521, 2, 0, 917522, 1, 0, 917523, -1073741822, 0, 917524, 1, 0, 917525, 2, 0 )

[node name="BricksTileMap" type="TileMap" parent="."]
tile_set = SubResource( 6 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 196617, -1073741823, 0, 196618, -1073741823, 0, 196619, -1073741823, 0, 196620, -1073741823, 0, 196621, -1073741823, 0, 196622, -1073741823, 0, 196623, -1073741823, 0, 196624, -1073741823, 0, 196625, -1073741823, 0, 196626, 1, 0, 196627, -1073741823, 0, 196628, -1073741823, 0, 196629, -1073741823, 0, 196630, -1073741823, 0, 262153, -1073741823, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262166, -1073741823, 0, 327689, -1073741823, 0, 327690, 1, 0, 327691, 0, 0, 327692, 1, 0, 327694, 1, 0, 327696, 1, 0, 327698, 1, 0, 327700, 1, 0, 327702, -1073741823, 0, 393225, -1073741823, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393232, 0, 0, 393233, 0, 0, 393235, 0, 0, 393236, 0, 0, 393238, -1073741823, 0, 458761, -1073741823, 0, 458762, 1, 0, 458763, 0, 0, 458764, 1, 0, 458766, 1, 0, 458768, 1, 0, 458769, 0, 0, 458770, 1, 0, 458772, 1, 0, 458773, 0, 0, 458774, -1073741823, 0, 524297, -1073741823, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524305, 0, 0, 524307, 0, 0, 524309, 0, 0, 524310, -1073741823, 0, 589833, -1073741823, 0, 589834, 1, 0, 589836, 1, 0, 589837, 0, 0, 589838, 1, 0, 589840, 1, 0, 589842, 1, 0, 589844, 1, 0, 589845, 0, 0, 589846, -1073741823, 0, 655369, -1073741823, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655374, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655381, 0, 0, 655382, -1073741823, 0, 720905, -1073741823, 0, 720906, 1, 0, 720908, 1, 0, 720909, 0, 0, 720910, 1, 0, 720911, 0, 0, 720912, 1, 0, 720913, 0, 0, 720914, 1, 0, 720915, 0, 0, 720916, 1, 0, 720917, 0, 0, 720918, -1073741823, 0, 786441, -1073741823, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786447, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786454, -1073741823, 0, 851977, -1073741823, 0, 851978, 1, 0, 851980, 1, 0, 851982, 1, 0, 851983, 0, 0, 851984, 1, 0, 851985, 0, 0, 851986, 1, 0, 851987, 0, 0, 851988, 1, 0, 851990, -1073741823, 0, 917513, -1073741823, 0, 917517, 0, 0, 917521, 0, 0, 917526, -1073741823, 0, 983049, -1073741823, 0, 983050, -1073741823, 0, 983051, -1073741823, 0, 983052, -1073741823, 0, 983053, -1073741823, 0, 983054, -1073741823, 0, 983055, -1073741823, 0, 983056, -1073741823, 0, 983057, -1073741823, 0, 983058, -1073741823, 0, 983059, -1073741823, 0, 983060, -1073741823, 0, 983061, -1073741823, 0, 983062, -1073741823, 0 )

[node name="Player0" parent="." instance=ExtResource( 2 )]
position = Vector2( 320, 444 )

[node name="Player1" parent="." instance=ExtResource( 2 )]
position = Vector2( 664, 128 )
player_type = 1

[node name="SuddenDeath" parent="." instance=ExtResource( 7 )]

[node name="GameUI" parent="." instance=ExtResource( 1 )]

[node name="TimerLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 477.0
margin_top = 16.0
margin_right = 547.0
margin_bottom = 89.0
custom_colors/font_color = Color( 0.0117647, 0.964706, 0.0196078, 1 )
custom_fonts/font = SubResource( 4 )
text = "3"
align = 1
valign = 1

[node name="GameTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
